--- a/index.html
+++ b/index.html
@@ -1,310 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FindYourJob - сайт про удаленную работу</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+    <title>Главная - Venom 2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <header class="header pb-5">
-      <div class="container">
-        <div
-          class="d-flex pt-4 d-lg-none align-items-center justify-content-between"
-        >
-          <a href="#" class="logo-link">
-            <img src="img/logo.svg" alt="logo: findyourjob" />
-          </a>
-          <a href="#" class="menu-button">
-            <img src="img/menu-burger.svg" alt="icon: burger menu" />
-          </a>
-        </div>
-        <div
-          class="row align-items-center py-3 navbar flex-column flex-lg-row justify-content-center"
-        >
-          <a href="" class="close-button d-lg-none">&times;</a>
-          <div class="col-2 mb-5 mb-lg-0">
-            <a href="#" class="logo-link">
-              <img src="img/logo.svg" alt="logo: findyourjob" />
-            </a>
-          </div>
-
-          <div class="col-lg d-flex justify-content-center mb-5 mb-lg-0">
-            <nav class="nav">
-              <ul
-                class="menu d-flex flex-column flex-lg-row align-items-center"
-              >
-                <li class="menu-item">
-                  <a href="#" class="menu-link">Главная</a>
-                </li>
-                <li class="menu-item">
-                  <a href="#" class="menu-link">Вакансии</a>
-                </li>
-                <li class="menu-item">
-                  <a href="#" class="menu-link">Компании</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <div
-            class="col-lg-3 d-flex align-items-center justify-content-center justify-content-lg-end flex-column flex-lg-row"
-          >
-            <a href="#" class="button button-link">Войти</a>
-            <a href="#" class="button button-primary">Регистрация</a>
-          </div>
-        </div>
-        <div class="row pt-5 hero">
-          <div class="col-xxl-5 col-lg-7 col-md-9">
-            <h1 class="hero-title">Найдите удаленную работу вашей мечты</h1>
-            <p class="hero-text">
-              Создайте резюме или отправьте отклик на вакансию в&nbsp;компании с
-              мировым именем и работайте<br />по свободному графику
-            </p>
-            <div class="input-group d-flex">
-              <input type="text" class="input" placeholder="Начните поиск" />
-              <button class="button button-primary">
-                <img
-                  class="button-icon"
-                  src="img/search-icon.svg"
-                  alt="icon: search"
-                />
-                <span class="button-text d-none d-md-inline-block"
-                  >Искать вакансии</span
-                >
-              </button>
-            </div>
-            <div class="tags-group">
-              <span class="tags-label">Например:</span>
-              <a href="#" class="tag">Front-end</a>
-              <a href="#" class="tag">Back-end</a>
-              <a href="#" class="tag">Designer</a>
-            </div>
-          </div>
-          <!-- /.col-5 -->
-          <div class="col-xxl-6 offset-xxl-1 col-lg-5 mt-5 mt-lg-0">
-            <img
-              src="img/hero-image.svg"
-              alt="image: people with laptops"
-              class="hero-image"
-            />
-          </div>
-          <!-- /.col-6 offset-1 -->
-        </div>
-        <!-- /.row -->
-      </div>
-    </header>
-    <section class="section">
-      <div class="container">
-        <h2 class="section-title">Категории</h2>
-        <div class="row">
-          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
-            <a href="#" class="card"
-              ><svg height="24" class="card-icon">
-                <use xlink:href="img/icons.svg#brush"></use>
-              </svg>
-              <span class="card-text">Дизайн</span></a
-            >
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
-            <a href="#" class="card">
-              <svg height="24" class="card-icon">
-                <use href="img/icons.svg#browser"></use>
-              </svg>
-              <span class="card-text">Разработка</span>
-            </a>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
-            <a href="#" class="card">
-              <svg height="24" class="card-icon">
-                <use href="img/icons.svg#Vector"></use>
-              </svg>
-              <span class="card-text">Копирайтинг</span>
-            </a>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
-            <a href="#" class="card">
-              <svg height="24" class="card-icon">
-                <use xlink:href="img/icons.svg#fingerprint"></use>
-              </svg>
-              <span class="card-text">Безопасность</span>
-            </a>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
-            <a href="#" class="card">
-              <svg height="24" class="card-icon">
-                <use xlink:href="img/icons.svg#camera1"></use>
-              </svg>
-              <span class="card-text">Видео</span>
-            </a>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
-            <a href="#" class="card">
-              <svg height="24" class="card-icon">
-                <use xlink:href="img/icons.svg#build"></use>
-              </svg>
-              <span class="card-text">Образование</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="section offers">
-      <div class="container">
-        <h2 class="section-title">Свежие вакансии</h2>
-        <div class="offer d-flex align-items-center flex-column flex-lg-row">
-          <div class="offer-image mb-4 mb-lg-0"></div>
-          <div class="offer-title mb-4 mb-lg-0">
-            <h3 class="offer-heading">Front-end разработчик</h3>
-            <span class="offer-place">Технопарк, Казань</span>
-          </div>
-          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
-          <div class="tags-group">
-            <span class="tags-label">Требования:</span>
-            <a href="#" class="tag">React</a>
-            <a href="#" class="tag">Sass</a>
-            <a href="#" class="tag">Figma</a>
-          </div>
-          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
-        </div>
-        <div class="offer d-flex align-items-center flex-column flex-lg-row">
-          <div class="offer-image mb-4 mb-lg-0"></div>
-          <div class="offer-title mb-4 mb-lg-0">
-            <h3 class="offer-heading">Front-end разработчик</h3>
-            <span class="offer-place">Технопарк, Казань</span>
-          </div>
-          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
-          <div class="tags-group">
-            <span class="tags-label">Требования:</span>
-            <a href="#" class="tag">React</a>
-            <a href="#" class="tag">Sass</a>
-            <a href="#" class="tag">Figma</a>
-          </div>
-          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
-        </div>
-        <div class="offer d-flex align-items-center flex-column flex-lg-row">
-          <div class="offer-image mb-4 mb-lg-0"></div>
-          <div class="offer-title mb-4 mb-lg-0">
-            <h3 class="offer-heading">Front-end разработчик</h3>
-            <span class="offer-place">Технопарк, Казань</span>
-          </div>
-          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
-          <div class="tags-group">
-            <span class="tags-label">Требования:</span>
-            <a href="#" class="tag">React</a>
-            <a href="#" class="tag">Sass</a>
-            <a href="#" class="tag">Figma</a>
-          </div>
-          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
-        </div>
-        <div class="offer d-flex align-items-center flex-column flex-lg-row">
-          <div class="offer-image mb-4 mb-lg-0"></div>
-          <div class="offer-title mb-4 mb-lg-0">
-            <h3 class="offer-heading">Front-end разработчик</h3>
-            <span class="offer-place">Технопарк, Казань</span>
-          </div>
-          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
-          <div class="tags-group">
-            <span class="tags-label">Требования:</span>
-            <a href="#" class="tag">React</a>
-            <a href="#" class="tag">Sass</a>
-            <a href="#" class="tag">Figma</a>
-          </div>
-          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
-        </div>
-      </div>
-    </section>
-    <section class="section subscribe">
-      <div class="container">
-        <form class="subscribe-form">
-          <h2 class="subscribe-title">
-            Подпишитесь на рассылку с новыми вакансиями
-          </h2>
-          <p class="subscribe-subtitle">
-            Мы отправляем по одному письму в&nbsp;неделю с&nbsp;подходящими вам
-            вакансиями
+  <body class="blood">
+    <div class="container">
+      <header class="header">
+        <a href="#" class="logo-link">
+          <img
+            width="46"
+            height="71"
+            src="img/logo.png"
+            alt="logo: venom"
+            class="logo-image"
+          />
+        </a>
+        <nav class="nav">
+          <ul class="nav-menu">
+            <li class="nav-menu-item">
+              <a href="about.html" class="nav-menu-link">о фильме</a>
+            </li>
+            <li class="nav-menu-item">
+              <a href="trailer.html" class="nav-menu-link">трейлер</a>
+            </li>
+            <li class="nav-menu-item">
+              <a href="actors.html" class="nav-menu-link">актеры</a>
+            </li>
+            <li class="nav-menu-item">
+              <a href="premier.html" class="nav-menu-link">премьера</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <div class="film">
+        <div class="film-text">
+          <span class="film-date">16 сентября 2021</span>
+          <img src="img/Venom-2.svg" alt="logo: venom-2" class="film-logo" />
+          <p class="film-description">
+            В настырном журналисте по-прежнему живет симбиот.<br />Том Харди в
+            образе обаятельного суперзлодея<br />из комиксов Marvel.
           </p>
-          <div class="input-group d-flex">
-            <input type="text" class="input" placeholder="E-mail" />
-            <button class="button button-primary">
-              <img
-                class="button-icon"
-                src="img/envelope.svg"
-                alt="icon: search"
-              />
-              <span class="button-text d-none d-md-inline-block"
-                >Подписаться</span
-              >
-            </button>
-          </div>
-        </form>
-      </div>
-    </section>
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0 col-7 mx-auto">
+        </div>
+        <div class="button-group">
+          <button class="button button-primary">
             <img
-              src="img/logo.svg"
-              alt="logo: findyourjob"
-              class="footer-logo"
+              width="15"
+              src="img/play.svg"
+              alt="icon: play"
+              class="button-icon"
             />
-            <p class="footer-description">
-              Сайт с вакансиями для тех,<br />кто ищет удаленную работу
-            </p>
-            <span class="footer-copyright">© 2021</span>
-          </div>
-          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0 col-7 mx-auto">
-            <h3 class="footer-title">Свяжитесь с нами</h3>
-            <ul class="footer-list">
-              <li class="footer-list-item">
-                <a href="tel:+78002020300" class="footer-list-link"
-                  >8 800 20 20 300</a
-                >
-              </li>
-              <li class="footer-list-item">
-                <a href="mailto:info@findyourjob.net" class="footer-list-link"
-                  >info@findyourjob.net</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0 col-7 mx-auto">
-            <h3 class="footer-title">Информация</h3>
-            <ul class="footer-list">
-              <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Обработка данных</a>
-              </li>
-              <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Конфиденциальность</a>
-              </li>
-              <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Публичная оферта</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0 col-7 mx-auto">
-            <h3 class="footer-title">Навигация по сайту</h3>
-            <ul class="footer-list">
-              <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Вакансии</a>
-              </li>
-              <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Компании</a>
-              </li>
-              <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Контакты</a>
-              </li>
-            </ul>
-          </div>
+            <span class="button-text">смотреть трейлер</span>
+          </button>
+          <a href="trailer.html" class="button button-link">
+            <img
+              width="15"
+              src="img/ticket.svg"
+              alt="icon: ticket"
+              class="button-icon"
+            />
+            <span class="button-text">билеты на премьеру</span>
+          </a>
         </div>
       </div>
-    </footer>
-    <script src="js/main.js"></script>
+    </div>
+    <img src="img/venom.png" alt="photo: venom" class="venom" />
   </body>
 </html>
