--- a/about.html
+++ b/about.html
@@ -25,6 +25,22 @@
           />
         </a>
         <nav class="nav">
+          <button class="menu-button">
+            <span class="menu-button-text"> Меню </span>
+            <img
+              src="img/menu-burger.svg"
+              alt="icon: burger menu"
+              class="menu-button-icon"
+            />
+          </button>
+          <button class="menu-close">
+            <span class="menu-close-text">Закрыть</span>
+            <img
+              src="img/close.svg"
+              alt="icon: close"
+              class="menu-close-icon"
+            />
+          </button>
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a href="about.html" class="nav-menu-link">о фильме</a>
@@ -95,5 +111,6 @@
         </div>
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
