--- a/index.html
+++ b/index.html
@@ -25,12 +25,33 @@
           />
         </a>
         <nav class="nav">
+          <button class="menu-button">
+            <span class="menu-button-text"> Меню </span>
+            <img
+              src="img/menu-burger.svg"
+              alt="icon: burger menu"
+              class="menu-button-icon"
+            />
+          </button>
+          <button class="menu-close">
+            <span class="menu-close-text">Закрыть</span>
+            <img
+              src="img/close.svg"
+              alt="icon: close"
+              class="menu-close-icon"
+            />
+          </button>
           <ul class="nav-menu">
             <li class="nav-menu-item">
               <a href="about.html" class="nav-menu-link">о фильме</a>
             </li>
             <li class="nav-menu-item">
-              <a href="trailer.html" class="nav-menu-link">трейлер</a>
+              <a
+                data-fancybox
+                href="https://www.youtube.com/watch?v=Othd8W8o3t0"
+                class="nav-menu-link"
+                >трейлер</a
+              >
             </li>
             <li class="nav-menu-item">
               <a href="actors.html" class="nav-menu-link">актеры</a>
@@ -51,7 +72,11 @@
           </p>
         </div>
         <div class="button-group">
-          <button class="button button-primary">
+          <a
+            data-fancybox
+            href="https://www.youtube.com/watch?v=Othd8W8o3t0"
+            class="button button-primary"
+          >
             <img
               width="15"
               src="img/play.svg"
@@ -59,8 +84,8 @@
               class="button-icon"
             />
             <span class="button-text">смотреть трейлер</span>
-          </button>
-          <a href="trailer.html" class="button button-link">
+          </a>
+          <a href="#" class="button button-link">
             <img
               width="15"
               src="img/ticket.svg"
@@ -73,5 +98,13 @@
       </div>
     </div>
     <img src="img/venom.png" alt="photo: venom" class="venom" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
